src/graph/half_edge/snapshots/_gammaloop__graph__half_edge__tests__hairy_three_loop.snap
---
source: src/graph/half_edge/tests.rs
expression: graph
---
HedgeGraph(
  nodes: {
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          16473,
        ],
      ),
    ): (),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          934,
        ],
      ),
    ): (),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          3072,
        ],
      ),
    ): (),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          12288,
        ],
      ),
    ): (),
  },
  base_nodes: 4,
  involution: Involution(
    inv: [
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Source((Some(()), 1))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Sink(0)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Source((Some(()), 3))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Sink(2)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Source((Some(()), 5))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Sink(4)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Identity(Some(()))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Identity(Some(()))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Identity(Some(()))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Source((Some(()), 10))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            3072,
          ],
        ),
      ), Sink(9)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            3072,
          ],
        ),
      ), Source((Some(()), 12))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            12288,
          ],
        ),
      ), Sink(11)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            12288,
          ],
        ),
      ), Source((Some(()), 14))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Sink(13)),
    ],
  ),
)
