src/graph/half_edge/snapshots/_gammaloop__graph__half_edge__tests__hairy_three_loop_cycles.snap
---
source: src/graph/half_edge/tests.rs
expression: cycles
---
[
  InternalSubGraph(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        32259,
      ],
    ),
    loopcount: Some(1),
  ),
  InternalSubGraph(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        32268,
      ],
    ),
    loopcount: Some(1),
  ),
  InternalSubGraph(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        32304,
      ],
    ),
    loopcount: Some(1),
  ),
]
