src/graph/half_edge/snapshots/_gammaloop__graph__half_edge__tests__three_loop.snap
---
source: src/graph/half_edge/tests.rs
expression: graph
---
HedgeGraph(
  nodes: {
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          2073,
        ],
      ),
    ): (),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          102,
        ],
      ),
    ): (),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          384,
        ],
      ),
    ): (),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          1536,
        ],
      ),
    ): (),
  },
  base_nodes: 4,
  involution: Involution(
    inv: [
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            2073,
          ],
        ),
      ), Source((Some(()), 1))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            102,
          ],
        ),
      ), Sink(0)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            102,
          ],
        ),
      ), Source((Some(()), 3))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            2073,
          ],
        ),
      ), Sink(2)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            2073,
          ],
        ),
      ), Source((Some(()), 5))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            102,
          ],
        ),
      ), Sink(4)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            102,
          ],
        ),
      ), Source((Some(()), 7))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            384,
          ],
        ),
      ), Sink(6)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            384,
          ],
        ),
      ), Source((Some(()), 9))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            1536,
          ],
        ),
      ), Sink(8)),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            1536,
          ],
        ),
      ), Source((Some(()), 11))),
      (HedgeNode(
        internal_graph: InternalSubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 12,
            data: [
              0,
            ],
          ),
          loopcount: Some(0),
        ),
        hairs: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            2073,
          ],
        ),
      ), Sink(10)),
    ],
  ),
)
